--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,12 @@
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 5px 10px 5px;
+
 }
 
 .logo {
@@ -14,12 +20,24 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  width: auto;
+  gap: 10px;
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 8px 15px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+.left-links, .right-links {
+  display: flex;
+  align-items: center;
+  
 }
