--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -5,12 +5,31 @@ body {
 img {
   width: 100px;
   height: 100px;
+  display: block;
+  margin: 0 auto;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  gap: 300px;;
 }
+.content {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+}
+.text {
+  text-align: center;
+  flex: wrap;
+  margin-top: 20px;
+  max-width: 150px;
+}
+
 
 /* do not edit this footer */
 .footer {
