--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,37 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal {
+  display: flex;
+  padding: 15px;
+  height: 160px;;
+
+}
+.icon {
+  flex-shrink: 0;
+  margin-right: 15px;
+}
+.part1 {
+  display: flex;
+  ;
+}
+.close-button {
+  margin-left: auto;
+}
+.header {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.text {
+  font-size: 14px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
