--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,53 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+/* solution  */
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-links {
+  display: flex;
+  gap: 16px;
+  margin-left: 16px;
+  align-items: center;
+}
+.right-links {
+  display: flex;
+  gap: 16px;
+  margin-right: 16px;
+  align-items: center;
+}
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+ul {
+  list-style: none;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: #3f3e3e;
+}
+.footer {
+  background-color: #b3b2b2;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+button {
+  padding: 8px 16px;
+  background-color: #cfcccc;
+  color: rgb(0, 0, 0);
+}
