used flexbox to organize my solution

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,68 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/** solution **/
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 23px;
+}
+  
+
+.content {
+  display: flex;
+  flex: 1;
+  
+}
+.sidebar {
+  min-width: 300px;
+  padding-left: 16px;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 24px;
+}
+.ul {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.header {
+  text-align: left;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+  font-family: Impact, 'Arial Narrow Bold', sans-serif;
+  font-weight: 900;
+  font-size: 32px;
+}
+
+.texts {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 48px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.card {
+  width: 300px;
+  height: 300px;
+  padding: 48px;
+}
